--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 *.cache
 Pristine Packages
 Settings/Session.sublime_session
+Settings/License.sublime_license
+sublime-theme.sublime-project
+sublime-theme.sublime-workspace
